added to legacies

--- a/app/views/static_pages/local_fast_facts.html.erb
+++ b/app/views/static_pages/local_fast_facts.html.erb
@@ -64,6 +64,7 @@
           <li>Steve Nims and Rob Sauda</li>
           <li>Emmett and Jackson Coakley</li>
           <li>Danny and Cody Abdeen</li>
+          <li>Joe and Zack Olmsted</li>
       </ul>
     </div>
   </div>
