working on improving emails

--- a/app/views/user_mailer/new_user_alert_email.html.erb
+++ b/app/views/user_mailer/new_user_alert_email.html.erb
@@ -1,11 +1,35 @@
-<p>Hey <%= @user.first_name %>,</p>
-
-<p>There is a new user who just signed up!</p>
-<p>The new user's name is <%= "#{@new_user.first_name} #{@new_user.last_name}"%> he signed up as a  <%= "#{@new_user.user_status}" %></p>
-
-<p>To update information about this user you can click <a href='gammanu.org/users/all/edit'>here</a></p>
-<p>If you want to send them a welcoming email their email is  <%= "#{@new_user.email }" %></p>
-
-<p>Have a nice day!</p>
-
-<p>Your friendly email notification service</p>
+<tr style="background-color: #5e0000;">
+  <td align="left" valign="top" style="padding-left: 0px; padding-bottom: 10px; padding-top: 0px; padding-right: 0px; color: #ffffff;">
+    Hey Paul,
+  </td>
+</tr>
+<tr>
+  <td align="left" valign="top" style="padding-left: 0px; padding-bottom: 10px; padding-top: 0px; padding-right: 0px; color: #ffffff;">
+    There is a new user who just signed up!
+  </td>
+</tr>
+<tr>
+  <td align="left" valign="top" style="padding-left: 0px; padding-bottom: 10px; padding-top: 0px; padding-right: 0px; color: #ffffff;">
+    The new user's name is Xavier Thompson he signed up as a potential new member
+  </td>
+</tr>
+<tr>
+  <td align="left" valign="top" style="padding-left: 0px; padding-bottom: 10px; padding-top: 0px; padding-right: 0px; color: #ffffff;">
+    To update information about this user you can click here
+  </td>
+</tr>
+<tr>
+  <td align="left" valign="top" style="padding-left: 0px; padding-bottom: 10px; padding-top: 0px; padding-right: 0px; color: #ffffff;">
+    If you want to send them a welcoming email their email is xavier.thompson95@gmail.com
+  </td>
+</tr>
+<tr>
+  <td align="left" valign="top" style="padding-left: 0px; padding-bottom: 10px; padding-top: 0px; padding-right: 0px;color: #ffffff;">
+    Have a nice day!
+  </td>
+</tr>
+<tr>
+  <td align="left" valign="top" style="padding-left: 0px; padding-bottom: 0px; padding-top: 0px; padding-right: 0px;color: #ffffff;">
+    Your friendly email notification service
+  </td>
+</tr>
