--- a/app/views/user_mailer/_new_user_alert.html.erb
+++ b/app/views/user_mailer/_new_user_alert.html.erb
@@ -10,7 +10,9 @@
 </tr>
 <tr>
   <td align="left" valign="top" style="padding-left: 0px; padding-bottom: 10px; padding-top: 0px; padding-right: 0px; color: #ffffff;">
-    The new user's name is Xavier Thompson he signed up as a potential new member. To update information about this user you can click here. If you want to send them a welcoming email their email is xavier.thompson95@gmail.com
+    The new user's name is <%= "#{new_user.first_name} #{new_user.last_name}" %> he signed up as a potential new member
+    To update information about this user you can <a href='gammanu.org/users/all/edit'>here.</a><
+    If you want to send them a welcoming email their email is <%= "#{@new_user.email }" %>
   </td>
 </tr>
 <tr>
