updated mailchimp and new user emails

--- a/app/views/user_mailer/_header.html.erb
+++ b/app/views/user_mailer/_header.html.erb
@@ -1,5 +1,5 @@
 <tr>
   <td align="center" valign="top" style="padding-left: 0px; padding-bottom: 0px; padding-top: 0px; padding-right: 0px;">
-    <%= image_tag 'https://s3.amazonaws.com/phitau/emails/phitau_header.jpg', style: 'width: 600px; height: auto;'%>
+    <%= image_tag 'https://s3.amazonaws.com/phitau/emails/phikappatau_header.png', style: 'width: 600px; height: auto;'%>
   </td>
 </tr>
