--- a/app/views/user_mailer/_mailchimp_sign_up.html.erb
+++ b/app/views/user_mailer/_mailchimp_sign_up.html.erb
@@ -1,52 +1,36 @@
 <tr>
-  <td align="left" valign="top" style="padding-left: 0px; padding-bottom: 10px; padding-top: 0px; padding-right: 0px; color: #ffffff;">
+  <td align="left" valign="top" style="padding-left: 10px; padding-bottom: 10px; padding-top: 10px; padding-right: 0px; color: #000000;">
     Hey <%= @user.first_name %>,
   </td>
 </tr>
 <tr>
-  <td align="left" valign="top" style="padding-left: 0px; padding-bottom: 10px; padding-top: 0px; padding-right: 0px; color: #ffffff;">
+  <td align="left" valign="top" style="padding-left: 10px; padding-bottom: 10px; padding-top: 0px; padding-right: 0px; color: #000000;">
     I wanted to invite you to sign up for our Alumni News Letter!
 
   </td>
 </tr>
 <tr>
-  <td align="left" valign="top" style="padding-left: 0px; padding-bottom: 10px; padding-top: 0px; padding-right: 0px; color: #ffffff;">
+  <td align="left" valign="top" style="padding-left: 10px; padding-bottom: 10px; padding-top: 0px; padding-right: 0px; color: #000000;">
     Every month, during the school year, we send out an email with updates about what we are up to and some info about other Gamma Nu almuni!
-
-  </td>
-</tr>
-<tr>
-  <td align="left" valign="top" style="padding-left: 0px; padding-bottom: 10px; padding-top: 0px; padding-right: 0px; color: #ffffff;">
     If you have filled out your profile <a href="<%= @domain %>/users/<%= @user.id %>/edit">here</a>
-
-  </td>
-</tr>
-<tr>
-  <td align="left" valign="top" style="padding-left: 0px; padding-bottom: 10px; padding-top: 0px; padding-right: 0px; color: #ffffff;">
     Then you can email you can click here to <a href="<%= @domain %>/users/<%= @user.id %>/subscribe">sign up!</a>
-
-  </td>
-</tr>
-<tr>
-  <td align="left" valign="top" style="padding-left: 0px; padding-bottom: 10px; padding-top: 0px; padding-right: 0px; color: #ffffff;">
     Otherwise you can sign up <a href="http://eepurl.com/bfz215">here!</a>
-
   </td>
 </tr>
 <tr>
-  <td align="left" valign="top" style="padding-left: 0px; padding-bottom: 10px; padding-top: 0px; padding-right: 0px; color: #ffffff;">
+  <td align="left" valign="top" style="padding-left: 10px; padding-bottom: 10px; padding-top: 0px; padding-right: 0px; color: #000000;">
     If you have trouble with the signing up please contact me at <%= "#{@user_to_contact.email}" %>
 
   </td>
 </tr>
 <tr>
-  <td align="left" valign="top" style="padding-left: 0px; padding-bottom: 10px; padding-top: 0px; padding-right: 0px; color: #ffffff;">
+  <td align="left" valign="top" style="padding-left: 10px; padding-bottom: 10px; padding-top: 0px; padding-right: 0px; color: #000000;">
     In Phi,
 
   </td>
 </tr>
 <tr>
-  <td align="left" valign="top" style="padding-left: 0px; padding-bottom: 10px; padding-top: 0px; padding-right: 0px; color: #ffffff;">
+  <td align="left" valign="top" style="padding-left: 10px; padding-bottom: 20px; padding-top: 0px; padding-right: 0px; color: #000000;">
     <%= "#{@user_to_contact.first_name} #{@user_to_contact.last_name}" %>
   </td>
 </tr>
