--- a/app/views/user_mailer/_base_template.html.erb
+++ b/app/views/user_mailer/_base_template.html.erb
@@ -9,7 +9,7 @@
 <table border="0" cellpadding="0" cellspacing="0" height="100%" width="100%" id="bodyTable">
   <tr>
     <td align="center" valign="top">
-      <table border="0" cellpadding="0" cellspacing="0" width="600" id="emailContainer" style="background-color: #5e0000;">
+      <table border="0" cellpadding="0" cellspacing="0" width="600" id="emailContainer">
         <%= render partial: 'user_mailer/header' %>
         <%= render partial: @body_template %>
         <%= render partial: 'user_mailer/footer' %>
