fixed up contact page

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -186,6 +186,7 @@ a.logo:hover{
   position: absolute;
   bottom: -5px;
   left: 5px;
+  margin-right: 5px;
   color: #ffffff;
   background-color: #5E0000;
 }
@@ -194,7 +195,7 @@ a.logo:hover{
   width: auto;
   height: 30px;
   position: absolute;
-  bottom: 5px;
+  top: 5px;
   right: 5px;
 }
 
