--- a/app/views/user_mailer/_mailchimp_sign_up.html.erb
+++ b/app/views/user_mailer/_mailchimp_sign_up.html.erb
@@ -12,8 +12,8 @@
 <tr>
   <td align="left" valign="top" style="padding-left: 10px; padding-bottom: 10px; padding-top: 0px; padding-right: 0px; color: #000000;">
     Every month, during the school year, we send out an email with updates about what we are up to and some info about other Gamma Nu almuni!
-    If you have filled out your profile <a href="<%= @domain %>/users/<%= @user.id %>/edit">here</a>
-    Then you can email you can click here to <a href="<%= @domain %>/users/<%= @user.id %>/subscribe">sign up!</a>
+    If you have filled out your profile <a href="gammanu.org/users/<%= @user.id %>/edit">here</a>
+    Then you can email you can click here to <a href="gammanu.org/users/<%= @user.id %>/subscribe">sign up!</a>
     Otherwise you can sign up <a href="http://eepurl.com/bfz215">here!</a>
   </td>
 </tr>
