added paronia gem and created needed migrations

--- a/app/views/user_mailer/_mailchimp_sign_up.html.erb
+++ b/app/views/user_mailer/_mailchimp_sign_up.html.erb
@@ -14,7 +14,7 @@
     Every month, during the school year, we send out an email with updates about what we are up to and some info about other Gamma Nu almuni!
     If you have filled out your profile <a href="gammanu.org/users/<%= @user.id %>/edit">here</a>
     Then you can email you can click here to <a href="gammanu.org/users/<%= @user.id %>/subscribe">sign up!</a>
-    Otherwise you can sign up <a href="http://eepurl.com/bfz215">here!</a>
+    Otherwise you can sign up <a href="http://eegipurl.com/bfz215">here!</a>
   </td>
 </tr>
 <tr>
