--- a/app/views/static_pages/resources.html.erb
+++ b/app/views/static_pages/resources.html.erb
@@ -3,55 +3,64 @@
     <div class="card_registration">
       <h1>Resources</h1>
       <hr>
-
-        <% if current_user.have_permissions?('writer') %>
-          <div class="resources col-sm-4">
-            <h1>Writer</h1>
-            <hr>
-            <h3><%= link_to 'Create Posts', posts_path %></h3>
-            <h3><%= link_to 'Create Alumni-News-Letters', new_alumni_news_letter_path %></h3>
-          </div>
-        <% end %>
-        <% if  current_user.have_permissions?('admin') %>
-          <div class="resources col-sm-4">
-            <h2>Admin</h2>
-            <h3><%= link_to 'Create Posts', posts_path %></h3>
-            <h3><%= link_to 'Create Alumni-News-Letters', new_alumni_news_letter_path %></h3>
-            <h3><%= link_to 'Update Positions', positions_path %></h3>
-            <h3><%= link_to 'Update Roles', roles_path %></h3>
-            <h3><%= link_to 'Edit All Users', 'users/all/edit' %></h3>
-            <h3><%= link_to 'Community Service Logs', community_services_path %></h3>
-            <h3><%= link_to 'Brothers Community Service', brothers_hours_path %></h3>
-            <h3><%= link_to 'Manually Enter Community Service', community_service_manually_path, 'data-no-turbolink' => true %></h3>
-          </div>
-        <% end %>
-
-        <% if  current_user.have_permissions?('community_service') %>
+      <% if current_user.multiple_have_permissions?(['admin','community_service','president','second_vp']) %>
           <div class="resources col-sm-4">
             <h2>Community Service</h2>
             <h3><%= link_to 'Community Service Logs', community_services_path %></h3>
             <h3><%= link_to 'Brothers Community Service', brothers_hours_path %></h3>
             <h3><%= link_to 'Manually Enter Community Service', community_service_manually_path, 'data-no-turbolink' => true %></h3>
+            <!--  'data-no-turbolink' => true makes sure things aren't cached -->
           </div>
-        <% end %>
-
-        <% if  current_user.have_permissions?('president') %>
+      <% end %>
+      <% if current_user.multiple_have_permissions?(['admin','president','writer','second_vp']) %>
           <div class="resources col-sm-4">
-            <h2>President</h2>
-            <h3><%= link_to 'Create Posts', posts_path%></h3>
-            <h3><%= link_to 'Update Positions', positions_path %></h3>
+            <h1>Posts</h1>
+            <h3><%= link_to 'Create Post', new_post_path %></h3>
+            <h3><%= link_to 'Edit Posts', posts_path %></h3>
           </div>
-        <% end %>
+      <% end %>
+      <% if current_user.multiple_have_permissions?(['admin','president','writer','second_vp']) %>
+          <div class="resources col-sm-4">
+            <h1>Recruitment</h1>
+            <h3><%= link_to 'Potentials', potentials_path %></h3>
+            <h3><%= link_to 'New Potentials', new_users_admin %></h3>
+            <h3><%= link_to 'New Text Message', new_text_message_path %></h3>
+            <h3><%= link_to 'View Old Texts', text_messages_path %></h3>
+          </div>
+      <% end %>
+      <% if current_user.multiple_have_permissions?(['admin','president','writer','second_vp']) %>
+          <div class="resources col-sm-4">
+            <h1>Alumni</h1>
+            <h3><%= link_to 'Create Alumni-News-Letters', new_alumni_news_letter_path %></h3>
+            <h3><%= link_to 'View Alumni-News-Letters', alumni_news_letters_path %></h3>
+            <h3><%= link_to 'New Composite', new_composite_path %></h3>
+            <h3><%= link_to 'Edit Old Composites', composite_path %></h3>
+            <h3><%= link_to 'New Paddle', new_paddle_path %></h3>
+            <h3><%= link_to 'Edit Old Paddle', paddle_path %></h3>
+          </div>
+      <% end %>
+      <% if current_user.multiple_have_permissions?(['admin','president']) %>
+          <div class="resources col-sm-4">
+            <h1>Update FAQ</h1>
+            <h3><%= link_to 'Edit All Users', edit_all_path %></h3>
+          </div>
+      <% end %>
+      <% if current_user.multiple_have_permissions?(['admin','president','writer','second_vp']) %>
+          <div class="resources col-sm-4">
+            <h1>Users</h1>
+            <h3><%= link_to 'FAQ Categories', faq_categories_path %></h3>
+            <h3><%= link_to 'FAQ Questions', faq_questions_path %></h3>
+          </div>
+      <% end %>
 
-        <% if current_user.confirmed_brother? %>
+      <% if current_user.confirmed_brother? %>
           <div class="resources col-sm-4">
             <h2>Brothers</h2>
             <h3><%= link_to 'View Alumni-News-Letters', alumni_news_letters_path %></h3>
             <h3><%= link_to 'Submit Receipt', new_receipt_path %></h3>
-            <h3><%= link_to 'Submit Community Service', new_community_service_path %></h3>
+            <h3><%= link_to 'Submit Community Service Hours', new_community_service_path %></h3>
           </div>
-        <% end %>
-
+      <% end %>
       <div class="clear"></div>
     </div>
   </div>
