added composites to footer andupdated resources

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -19,7 +19,7 @@
           <ul>
             <li><h2 class="footer_title">Reach Out</h2></li>
             <li><%= link_to "Contact Us", contact_us_path, class: "nav-item"%></li>
-            <li><%= link_to "Parents", information_for_parents_path, class: "nav-item"%></li>
+            <li><%= link_to "Composites", composites_path, class: "nav-item"%></li>
             <li><%= link_to "Galleries", galleries_path, class: "nav-item"%></li>
             <li><%= link_to "Submit Images", new_image_path, class: "nav-item"%></li>
           </ul>
@@ -46,6 +46,7 @@
             <li><h2 class="footer_title">Give Back</h2></li>
             <li><%= link_to "Volunteer Opportunities", volunteer_opportunities_path, class: "nav-item"%></li>
             <li><%= link_to "Parents Fund", parents_fund_path, class: "nav-item"%></li>
+            <li><%= link_to "Parents", information_for_parents_path, class: "nav-item"%></li>
           </ul>
         </li>
       </ul>
