--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -641,6 +641,10 @@ a.not-active:hover{
   max-width: 300px;
   max-height: 200px;
 }
+.composite-image{
+  width: 100%;
+  padding-right: 1%;
+}
 .gallery_imges a.img:hover{
   background-color: transparent !important;
 }
