--- a/app/views/composites/show.html.erb
+++ b/app/views/composites/show.html.erb
@@ -2,7 +2,8 @@
   <div class="col-md-6 col-md-offset-3 top-card-padding">
     <div class="card">
       <div align="center">
-          <%= image_tag @composite.picture_url %>
+          <%= image_tag @composite.picture_url, class: 'composite-image' %>
+        <div class="clear"></div>
         <h3><%= "#{@composite.year} - #{@composite.year.to_i + 1}" %> </h3>
       </div>
     </div>
