--- a/app/views/static_pages/resources.html.erb
+++ b/app/views/static_pages/resources.html.erb
@@ -33,7 +33,7 @@
               <hr>
             </div>
         <% end %>
-        <% if current_user.confirmed_brother? && current_user.user_status == 'alumni' %>
+        <% if current_user.confirmed_brother? && current_user.user_status == 'current brother' %>
             <div class="resources col-md-6">
               <div style="color: #736f7e">
                 <h2>Brothers</h2>
