--- a/app/views/roles/edit.html.erb
+++ b/app/views/roles/edit.html.erb
@@ -1,6 +1,14 @@
-<h1>Editing role</h1>
+<div class="row">
+  <div class="col-md-8 col-md-offset-2 top-card-padding">
+    <div class="card">
+      <h1 align="center">
+        Editing role
+      </h1>
 
-<%= render 'form' %>
+      <%= render 'form' %>
 
-<%= link_to 'Show', @role %> |
-<%= link_to 'Back', roles_path %>
+      <%= link_to 'Show', @role %> |
+      <%= link_to 'Back', roles_path %>
+    </div>
+  </div>
+</div>
