--- a/app/views/roles/new.html.erb
+++ b/app/views/roles/new.html.erb
@@ -1,5 +1,13 @@
-<h1>New role</h1>
+<div class="row">
+  <div class="col-md-8 col-md-offset-2 top-card-padding">
+    <div class="card">
+      <h1 align="center">
+        New role
+      </h1>
 
-<%= render 'form' %>
+      <%= render 'form' %>
 
-<%= link_to 'Back', roles_path %>
+      <%= link_to 'Back', roles_path %>
+    </div>
+  </div>
+</div>
