updated text editor for posts

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -19,8 +19,8 @@
     </div>
 
     <div class="field">
-      <%= f.label :content, "", :class => "tinymce", :rows => 15, :cols => 120 %><br>
-      <%= f.text_area :content, :class => "tinymce", :rows => 15, :cols => 120 %>
+      <%= f.label :content %><br>
+      <%= f.cktext_area :content %>
     </div>
 
       <div class="field posts_checkboxes" style="float: left">
