added events and updated creating a potential member

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -10,6 +10,8 @@
  *
  *= require_self
  *= require fancybox
+ *= require jquery-ui
+ *= require jquery.timepicker.css
  *= require lightbox
  *= require chosen
  *= require_tree .
