--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -9,6 +9,6 @@
       <%= f.text_field :phone_number, :placeholder => 'Phone Number', :class => 'col-md-3' %>
     </div>
     <div class="actions">
-      <%= f.submit %>
+      <%= f.submit 'Submit Registration' %>
     </div>
 <% end %>
