--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -816,6 +816,14 @@ only screen and (max-width: 760px),
   .brothers-hours-table td:nth-of-type(1):before { content: "Brothers Name"; }
   .brothers-hours-table td:nth-of-type(2):before { content: "Total Hours"; }
   .brothers-hours-table td:nth-of-type(3):before { content: "See All Events"; }
+
+  .events-table td:nth-of-type(1):before { content: "Sunday"; }
+  .events-table td:nth-of-type(2):before { content: "Monday"; }
+  .events-table td:nth-of-type(3):before { content: "Tuesday"; }
+  .events-table td:nth-of-type(4):before { content: "Wednesday"; }
+  .events-table td:nth-of-type(5):before { content: "Thursday"; }
+  .events-table td:nth-of-type(6):before { content: "Friday"; }
+  .events-table td:nth-of-type(7):before { content: "Saturday"; }
 }
 
 /* Smartphones (portrait and landscape) ----------- */
