--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-md-8 col-md-offset-2 top-card-padding">
     <div class="card_registration">
-      <h1>New User</h1>
+      <h1>Register</h1>
       <%= render 'form' %>
     </div>
   </div>
