updated who can see recuitment info

--- a/app/views/interview_times/_form.html.erb
+++ b/app/views/interview_times/_form.html.erb
@@ -12,16 +12,12 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :rush_interview %><br>
-    <%= f.text_field :rush_interview %>
-  </div>
-  <div class="field">
     <%= f.label :interview_time %><br>
-    <%= f.time_select :interview_time %>
+    <%= f.text_field :interview_time %>
   </div>
   <div class="field">
     <%= f.label :interview_date %><br>
-    <%= f.date_select :interview_date %>
+    <%= f.text_field :interview_date %>
   </div>
   <div class="actions">
     <%= f.submit %>
